trunk/Archive2/07/ffef660917a4f5/output
main.cpp:14:26: error: use of undeclared identifier 'e3'
    std::cout << f(100,  e3) << '\n';
                         ^
1 error generated.
